<resources>
    <string name="app_name">news</string>

    <string name="top">热门</string>
    <string name="shehui">社会</string>
    <string name="guoji">国际</string>
    <string name="guonei">国内</string>
    <string name="yule">娱乐</string>
    <string name="tiyu">体育</string>
    <string name="junshi">军事</string>
    <string name="keji">科技</string>
    <string name="shishang">时尚</string>
    <string name="caijing">财经</string>

</resources>
